@@ -35,6 +35,7 @@
 	* Partly eaten corpses are worthless for sacrificing
 	* Potion of water used against iron golems are more effective
 	* Carrying digging tools to shop is no longer blocked
+	* Touch of death changed - from SporkHack. Instadeath removed, antimagic is not fully protecting.
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
